<resources>
    <string name="app_name">stock search</string>
    <string name="search_title">Stock Market Search </string>
    <string name="get_quote">Get Quote</string>
    <string name="clear">Clear</string>
    <string name="favorites">Favorites</string>
    <string name="autorefresh">AutoRefresh </string>
    <string name="stock_details">Stock Details</string>
    <string name="indicators">Indicators</string>
    <string name="change">Change</string>
    <string-array name="sort_by">
        <item>Sort by</item>
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
    </string-array>
    <string-array name="order">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="indicators">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>STOCH</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
        <item>BBANDS</item>
        <item>MACD</item>
    </string-array>
    <string name="title_activity_second">SecondActivity</string>
    <string name="tab_text_1">CURRENT</string>
    <string name="tab_text_2">HISTORICAL</string>
    <string name="tab_text_3">NEWS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1">Historical fragment</string>
    <string name="hello_blank_fragment2">News fragment</string>

    <string name="facebook_app_id">234995460371941</string>
</resources>
